--- a/apps/ui/templates/ui/dashboard.html
+++ b/apps/ui/templates/ui/dashboard.html
@@ -21,6 +21,9 @@
                 <p class="text-lg font-bold text-purple-600">₹{{ total_sales }}</p>
             </div>
         </div>
+        <a href="/sales-and-customers/" class="mt-4 inline-flex items-center justify-center px-3 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm">
+            <span>Create Henna sale</span>
+        </a>
     </div>
 
     <!-- Expenses Summary Section -->
@@ -38,7 +41,7 @@
 
     <!-- Material Overview Section -->
     <div class="bg-white shadow rounded-lg p-4 mb-6">
-        <h2 class="text-xl font-semibold text-gray-800 mb-4">📦 Material Overview</h2>
+        <h2 class="text-xl font-semibold text-gray-800 mb-4">📦Total Purchase Overview</h2>
         <ul class="space-y-2 mb-4">
             {% for stock in stock_overview %}
             <li class="bg-gray-50 p-3 rounded-lg">
@@ -49,7 +52,7 @@
         </ul>
         <!-- Add New Material Button -->
         <a href="/materials/" class="inline-flex items-center justify-center px-3 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-sm">
-            <span>➕ Add New Material</span>
+            <span>View Purchase</span>
         </a>
     </div>
 
